# pico-sqlite

./: CMakeLists.txt  LICENSE.md  README.md
src/: fallback.c  fallback.h  shell.c
